crates/swc_ecma_parser/tests/test262-error-references/fail/81a5bf75eb66ff83.js.stderr
error: Expression expected
 --> $DIR/tests/test262-parser/fail/81a5bf75eb66ff83.js:1:4
  |
1 | () <= 42
  |    ^^

